added complete functionality on esp32

--- a/frontend/src/styles/buttonStyle.css
+++ b/frontend/src/styles/buttonStyle.css
@@ -4,6 +4,7 @@ button {
     color: 0f0f1e;
     border: none;
     padding: 10px 20px;
+    margin: 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
